Fix link styling
A quick and dirty fix apparently wasn't the best idea. Linkes nested
in lists didn't look consistent.

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -441,12 +441,9 @@ $button-size: 1.5rem;
 
 /* Post content wrapper */
 .article-wrap {
-	li > a {
-		text-decoration: underline;
-	}
-
+	li > a,
 	p > a {
-		color: $linkartcolor !important;
+		color: $linkartcolor;
 
 		&:hover {
 			text-decoration: underline;
@@ -606,7 +603,7 @@ $button-size: 1.5rem;
 	  @include font-rem(14);
 	  font-family: $heading-font;
 	  font-weight: 700;
-	  color: $white;
+	  color: $white !important;
 	  opacity: 0.8;
 	  &:hover {
 	    opacity: 1;
